# ChangeLog for media-video/vlc
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/vlc/ChangeLog,v 1.399 2008/10/19 14:14:38 aballier Exp $

  19 Oct 2008; Alexis Ballier <aballier@gentoo.org> vlc-0.9.4-r1.ebuild:
  Add a warning if no gui will be built. This will at least warn people not
  following closely vlc when upgrading from 0.8.6 to 0.9 that they will not
  have a GUI if they disabled the qt4 useflag.

  19 Oct 2008; Alexis Ballier <aballier@gentoo.org> -vlc-0.9.0_beta3.ebuild,
  -vlc-0.9.4.ebuild:
  remove old

  19 Oct 2008; Alexis Ballier <aballier@gentoo.org> metadata.xml:
  Improve useflag descriptions, by Douglas Anderson
  <douglasjanderson@gmail.com>, bug #242584

  19 Oct 2008; Markus Rothe <corsair@gentoo.org> vlc-0.9.4-r1.ebuild:
  Added ~ppc/~ppc64

*vlc-0.9.4-r1 (15 Oct 2008)

  15 Oct 2008; Alexis Ballier <aballier@gentoo.org>
  +files/embeddedvideo.patch, +vlc-0.9.4-r1.ebuild:
  Backport a change from upstream to reenable the qt embedded video output
  due to numerous requests and jb's explanations. Bug #240714.

  08 Oct 2008; Alexis Ballier <aballier@gentoo.org> -vlc-0.9.3.ebuild:
  remove old

  08 Oct 2008; Alexis Ballier <aballier@gentoo.org> vlc-0.9.4.ebuild:
  Add qt4 built with use checks for png useflag when using the qt4
  interface, bug #239550

*vlc-0.9.4 (08 Oct 2008)

  08 Oct 2008; Alexis Ballier <aballier@gentoo.org>
  +files/0001-Fix-build-with-x264-build-65.patch, +vlc-0.9.4.ebuild:
  version bump

  05 Oct 2008; Alexis Ballier <aballier@gentoo.org> -vlc-0.9.2.ebuild:
  remove unused version

  05 Oct 2008; Tobias Klausmann <klausman@gentoo.org> vlc-0.9.3.ebuild:
  Keyworded on alpha, bug #237813

  27 Sep 2008; Ferris McCormick <fmccor@gentoo.org> vlc-0.9.3.ebuild:
  Add back ~sparc --- Bug #237813.

  27 Sep 2008; Alexis Ballier <aballier@gentoo.org> -vlc-0.9.1.ebuild:
  remove unused version

*vlc-0.9.3 (27 Sep 2008)
