@@ -9,13 +9,13 @@ DIST vlc-m4-1.tar.bz2 1685 RMD160 14775ca0d23a348d0d2809f8fa0a6b86e2f1623f SHA1 
 DIST vlc-patches-59.tar.bz2 4685 RMD160 a01cba6d4af12ebd26faed4a7f8894529dc42e57 SHA1 387934801502ff82045ab446fb1421b14233cf03 SHA256 cf38f9398e62fad8c51dc1b0c8467236cbffb1d465ddbf5ab62d2bf4bbd1ec35
 DIST vlc-patches-61.tar.bz2 11855 RMD160 8f79c5594eca44c0f5bb4ed19e48ae39a8b17013 SHA1 6c7cc969ae4abbaccc8e1e8d3323d5a33bccf364 SHA256 01800e30ca1db5c5bbab8317195be1dc4c074452bbe41ed7f061e491baac6e24
 EBUILD vlc-0.8.6i-r2.ebuild 9095 RMD160 fa8c121127749ac5c21bc66e8646d4c6e2cf148a SHA1 1d1e5d6b5fe28df220314a1855c64facbb9670e8 SHA256 cf5e7e0727b694372b9a9d4cf77972089fb61d99d7accab6d0f6e5ea6fcceace
-EBUILD vlc-0.9.4-r1.ebuild 11112 RMD160 10e7c58cb8afdbec04404c6456f346c0aa8323c5 SHA1 af18830853fb44ac70866394aeccf48dba3b5b79 SHA256 52d72c8a0b28f80ab148ffb818e788937d0c1b7a1c36931c513690848a25c1d9
-MISC ChangeLog 65122 RMD160 fcb7f31159a0d45011f0066bfb3049b9cb9ab9e7 SHA1 50fa923714ae8b403254a40bf82015bada4e5088 SHA256 7b98e6e76072b75637d92bc80eaec7321aac9f37d20b275889bc4e8707c32c8b
+EBUILD vlc-0.9.4-r1.ebuild 10969 RMD160 51c9f65821dec1610f4b03860c58c75e5fceba2b SHA1 62717cf2ea4cc1bf8b4e74d63f1c1dbfaeef3c7b SHA256 341b706b3bc9f4c985306020ce5e227e8e2086e4aa60adfa855e00284a65768c
+MISC ChangeLog 65307 RMD160 94549133928bccfbec482f7909c7dbfe852b54b2 SHA1 acc51a48ce518d09d05d71b24faf97b29f0baaac SHA256 c84bb20d44ad0c76e5b3c9df326a0e184798b579fff03c3a1c927e3ddcd57091
 MISC metadata.xml 3268 RMD160 8106a671502d94ffddfd38caa96901b9c1334020 SHA1 ab6d85ac6a1c5693727816100079afcd3507ad02 SHA256 5eba1f569e6de9eb02e2251ca0526e104f1772033e1e354efd3360d805528490
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkj7QNgACgkQvFcC4BYPU0oVMwCfRxNUZwDH8AGC7nEe2P/ruABC
-J/EAnRBJrRxwDXsoQ2ybjE6k1x5VohUs
-=kvTv
+iEYEARECAAYFAkj+oNIACgkQvFcC4BYPU0oHuQCfXW7uFj6J8iwsmfB6s0eMx99+
+eEsAnioV113TXabcsHGQjmrwVT0QHNCu
+=w5O6
 -----END PGP SIGNATURE-----
