@@ -1,6 +1,10 @@
 # ChangeLog for media-video/vlc
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/vlc/ChangeLog,v 1.399 2008/10/19 14:14:38 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/vlc/ChangeLog,v 1.400 2008/10/22 03:41:00 aballier Exp $
+
+  22 Oct 2008; Alexis Ballier <aballier@gentoo.org> vlc-0.9.4-r1.ebuild:
+  vlc checks if the compiler supports fomit-frame-pointer, no need for the
+  old hack to explicitly remove it.
 
   19 Oct 2008; Alexis Ballier <aballier@gentoo.org> vlc-0.9.4-r1.ebuild:
   Add a warning if no gui will be built. This will at least warn people not
